--- a/css/styles.css
+++ b/css/styles.css
@@ -170,3 +170,127 @@ html, body {
     display: block;
     margin: auto;
 }
+/*Store*/
+.shop-item {
+    margin: 30px;
+}
+.shop-item-title {
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-size: 1.5em;
+    color: #333;
+    margin-bottom: 15px;
+}
+.shop-item-image {
+    height: 250px;
+}
+.shop-item-details {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+}
+.shop-item-price {
+    flex-grow: 1;
+}
+.shop-items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+/*Cart*/
+.cart-header {
+    font-weight: bold;
+    font-size: 1.2em;
+    color: #333;
+}
+.cart-column {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #000;
+    margin-right: 1.5em;
+    padding-bottom: 10px;
+    margin-top: 10px;
+}
+.cart-row {
+    display: flex;
+}
+.cart-item {
+    width: 45%;
+}
+.cart-price {
+    width:20%;
+    font-size: 1.2em;
+    color: #333;
+}
+.cart-quantity {
+    width: 35%;
+}
+.cart-item-title {
+    color: #333;
+    margin-left: 0.5em;
+    font-size: 1.2em;
+}
+.cart-item-image {
+    width: 75px;
+    height: auto;
+    border-radius: 10px;
+    border: 1px solid #000;
+}
+.btn-danger {
+    color: #fff;
+    background-color: darkblue;
+    border: none;
+    border-radius: .3em;
+    font-weight: bold;
+}
+.btn-danger:hover {
+    background-color: tomato;
+}
+.cart-quantity-input {
+    height: 34px;
+    width: 50px;
+    border-radius: 5px;
+    border: 1px solid teal;
+    background-color: #eeeeee;
+    color: #333;
+    padding: 0;
+    text-align: center;
+    font-size: 1.2em;
+    margin-right: 15px;
+}
+.cart-row:last-child {
+    border-bottom: 1px solid #000;
+}
+.cart-row:last-child .cart-column{
+    border-bottom: none;
+}
+.cart-total {
+    text-align: end;
+    font-size: 1.2em;
+}
+.cart-total-title {
+    font-weight: bold;
+    margin-right: 20px;
+}
+.btn-purchase {
+    display: block;
+    margin: 40px auto 80px auto;
+    font-size: 1.7em;
+}
+.btn {
+    text-align: center;
+    vertical-align: middle;
+    padding: .7em;
+    cursor: pointer;
+}
+.btn-primary {
+    color: #fff;
+    background-color: teal;
+    border-radius: .3em;
+    border: none;
+    font-weight: bold;
+}
+.btn-primary:hover {
+    background-color:#ED0000;
+}
